--- a/package.json
+++ b/package.json
@@ -25,8 +25,15 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.15.0",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tanstack/react-table": "^8.21.3",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
@@ -35,6 +42,7 @@
     "react-dom": "19.1.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-react": "^5.28.0",
+    "tailwind-merge": "^3.3.1",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
@@ -52,6 +60,7 @@
     "prisma": "^6.15.0",
     "tailwindcss": "^4",
     "tsx": "^4.20.5",
+    "tw-animate-css": "^1.3.7",
     "typescript": "^5"
   }
 }
