fix: 빌드 오류 해결

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,7 @@
 {
-  "semi": false,
-  "trailingComma": "es5",
   "singleQuote": true,
-  "printWidth": 80,
-  "tabWidth": 2,
-  "useTabs": false,
-  "arrowParens": "avoid",
-  "endOfLine": "lf"
+  "trailingComma": "all",
+  "semi": false,
+  "printWidth": 100,
+  "arrowParens": "always"
 }
