--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "prod": "NODE_ENV=production next dev --turbopack",
     "build": "prisma generate && next build --turbopack",
     "start": "next start",
     "postinstall": "prisma generate",
