--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@prisma/client": "^6.15.0",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@supabase/supabase-js": "^2.57.0",
@@ -45,6 +47,7 @@
     "next-auth": "^4.24.11",
     "next-pwa": "^5.6.0",
     "react": "19.1.0",
+    "react-day-picker": "^9.9.0",
     "react-dom": "19.1.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-react": "^5.28.0",
