feat: 환경별 개발환경 구성 및 스크립트 정리

--- a/package.json
+++ b/package.json
@@ -3,24 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev:local": "next dev --turbopack",
+    "dev:test": "dotenv -e .env.test -- next dev --turbopack",
+    "dev:prod": "dotenv -e .env.production -- next dev --turbopack",
     "swagger:generate": "node scripts/generate-swagger.js",
     "prebuild": "npm run swagger:generate",
     "build": "prisma generate && next build --turbopack",
+    "build:local": "dotenv -e .env.local -- prisma generate && dotenv -e .env.local -- next build --turbopack",
+    "build:test": "dotenv -e .env.test -- prisma generate && dotenv -e .env.test -- next build --turbopack",
+    "build:prod": "dotenv -e .env.production -- prisma generate && dotenv -e .env.production -- next build --turbopack",
     "start": "next start",
     "postinstall": "prisma generate",
+    "db": "dotenv -e .env.local -- prisma studio",
+    "db:test": "dotenv -e .env.test -- prisma studio",
+    "db:prod": "dotenv -e .env.production -- prisma studio",
+    "db:sync": "dotenv -e .env.local -- prisma db push && prisma generate",
+    "db:sync:test": "dotenv -e .env.test -- prisma migrate deploy && prisma generate",
+    "db:sync:prod": "dotenv -e .env.production -- prisma migrate deploy && prisma generate",
+    "db:seed": "dotenv -e .env.local -- prisma db seed",
+    "db:seed:test": "dotenv -e .env.test -- prisma db seed",
+    "db:seed:prod": "dotenv -e .env.production -- prisma db seed",
+    "db:reset": "prisma migrate reset",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
     "format": "prettier --write .",
-    "format:check": "prettier --check .",
-    "db:push": "prisma db push",
-    "db:generate": "prisma generate",
-    "db:sync": "prisma db push && prisma generate",
-    "db:migrate": "prisma migrate dev",
-    "db:migrate:deploy": "prisma migrate deploy",
-    "db:studio": "dotenv -e .env.local -- prisma studio",
-    "db:seed": "prisma db seed",
-    "db:reset": "prisma migrate reset"
+    "format:check": "prettier --check ."
   },
   "prisma": {
     "seed": "npx tsx prisma/seed.ts"
