feat: 그리드 전용 면허증확인 버튼 추가

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react": "19.1.0",
     "react-day-picker": "^9.9.0",
     "react-dom": "19.1.0",
+    "sharp": "^0.34.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-react": "^5.28.0",
     "tailwind-merge": "^3.3.1",
