feat: 사용자 정보 수정 로직 수정

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "db:seed": "dotenv -e .env.local -- prisma db seed",
     "db:seed:dev": "dotenv -e .env.development -- prisma db seed",
     "db:seed:prod": "dotenv -e .env.production -- prisma db seed",
-    "db:reset": "prisma migrate reset",
+    "db:reset": "dotenv -e .env.local -- npx prisma migrate reset",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
     "format": "prettier --write .",
