--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@prisma/client": "^6.15.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.15",
@@ -50,6 +51,7 @@
     "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "iron-session": "^8.0.4",
     "lucide-react": "^0.542.0",
@@ -63,6 +65,7 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-react": "^5.28.0",
     "tailwind-merge": "^3.3.1",
+    "vaul": "^1.1.2",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
