--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@supabase/supabase-js": "^2.57.0",
+    "@tanstack/react-query": "^5.90.1",
+    "@tanstack/react-query-devtools": "^5.90.1",
     "@tanstack/react-table": "^8.21.3",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^3.0.2",
