--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "swagger-ui-react": "^5.28.0",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
+    "xlsx": "^0.18.5",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
