--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,11 @@
   "crons": [
     {
       "path": "/api/keep-alive",
-      "schedule": "0 0 * * 3"
+      "schedule": "0 0 * * 1,4"
+    },
+    {
+      "path": "/api/cron/backup-workplace",
+      "schedule": "40 9 * * *"
     }
   ]
 }
