--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "date-fns-tz": "^3.2.0",
     "jimp": "^1.6.0",
     "lucide-react": "^0.542.0",
-    "next": "15.5.2",
+    "next": "^16.0.8",
     "next-auth": "^4.24.11",
     "next-pwa": "^5.6.0",
     "react": "19.1.0",
