--- a/package.json
+++ b/package.json
@@ -64,9 +64,10 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
+    "exceljs": "^4.4.0",
     "jimp": "^1.6.0",
     "lucide-react": "^0.542.0",
-    "next": "15.5.2",
+    "next": "^15.5.9",
     "next-auth": "^4.24.11",
     "next-pwa": "^5.6.0",
     "react": "19.1.0",
@@ -77,13 +78,14 @@
     "swagger-ui-react": "^5.28.0",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
-    "xlsx": "^0.18.5",
-    "yamljs": "^0.3.0"
+    "yamljs": "^0.3.0",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/cookie": "^0.6.0",
+    "@types/exceljs": "^0.5.3",
     "@types/lodash": "^4.17.20",
     "@types/node": "^20",
     "@types/pngjs": "^6.0.5",
