--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,8 @@
 {
   "crons": [
     {
-      "path": "/api/keep-alive",
-      "schedule": "0 0 * * 1,4"
-    },
-    {
       "path": "/api/cron/backup-workplace",
-      "schedule": "40 9 * * *"
+      "schedule": "* * * * *"
     }
   ]
 }
