--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "swagger-ui-react": "^5.28.0",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
+    "xlsx": "^0.18.5",
     "yamljs": "^0.3.0",
     "zustand": "^5.0.9"
   },
@@ -93,6 +94,7 @@
     "@types/react-dom": "^19",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-react": "^5.18.0",
+    "@types/xlsx": "^0.0.35",
     "dotenv-cli": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
