chore: 주간 DB 백업 자동화

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "db:seed:dev": "dotenv -e .env.development -- prisma db seed",
     "db:seed:prod": "dotenv -e .env.production -- prisma db seed",
     "db:reset": "dotenv -e .env.local -- npx prisma migrate reset",
+    "backup:prod": "./scripts/backup-db.sh",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
     "format": "prettier --write .",
