--- a/.github/workflows/db-backup.yml
+++ b/.github/workflows/db-backup.yml
@@ -29,7 +29,7 @@ jobs:
         env:
           DIRECT_URL: ${{ secrets.DIRECT_URL }}
         run: |
-          pg_dump "$DIRECT_URL" \
+          /usr/lib/postgresql/17/bin/pg_dump "$DIRECT_URL" \
             --no-owner \
             --no-acl \
             --clean \
