--- a/.github/workflows/db-backup.yml
+++ b/.github/workflows/db-backup.yml
@@ -45,10 +45,11 @@ jobs:
 
       - name: Configure rclone
         env:
-          RCLONE_CONFIG: ${{ secrets.RCLONE_CONFIG }}
+          RCLONE_CONFIG_BASE64: ${{ secrets.RCLONE_CONFIG_BASE64 }}
         run: |
           mkdir -p ~/.config/rclone
-          echo "$RCLONE_CONFIG" > ~/.config/rclone/rclone.conf
+          echo "$RCLONE_CONFIG_BASE64" | base64 -d > ~/.config/rclone/rclone.conf
+          cat ~/.config/rclone/rclone.conf
 
       - name: Upload to Google Drive
         run: |
