--- a/.github/workflows/db-backup.yml
+++ b/.github/workflows/db-backup.yml
@@ -48,8 +48,7 @@ jobs:
           RCLONE_CONFIG_BASE64: ${{ secrets.RCLONE_CONFIG_BASE64 }}
         run: |
           mkdir -p ~/.config/rclone
-          echo "$RCLONE_CONFIG_BASE64" | base64 -d > ~/.config/rclone/rclone.conf
-          cat ~/.config/rclone/rclone.conf
+          echo "$RCLONE_CONFIG_BASE64" | tr -d '\n\r ' | base64 -d > ~/.config/rclone/rclone.conf
 
       - name: Upload to Google Drive
         run: |
